--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
             <h2>Cronus em <span>Números</span></h2>
             <div class="numbers">
                 <div class="number">
-                    <h3>+20</h3>
+                    <h3>+19</h3>
                     <div class="line"></div>
                     <p>projetos</p>
                 </div>
                 <div class="number">
-                    <h3>+3960</h3>
+                    <h3>+3953</h3>
                     <div class="line"></div>
                     <p>horas poupadas</p>
                 </div>
@@ -222,9 +222,9 @@
                     <p>economizados</p>
                 </div>
                 <div class="number">
-                    <h3>+54%</h3>
+                    <h3>+73%</h3>
                     <div class="line"></div>
-                    <p>satisfação dos clientes</p>
+                    <p>produtividade</p>
                 </div>
             </div>
     </section>
@@ -241,28 +241,27 @@
                         <div class="texts">
                             <div class="text">
                                 <img src="./assets/verificado-icon.png" alt="">
-                                <p>Chatbot Inteligente para atendimento ao cliente e agendamentos.</p>
+                                <p>Bot Inteligente para atendimento ao cliente e agendamentos.</p>
                             </div>
                             <div class="text">
                                 <img src="./assets/verificado-icon.png" alt="">
-                                <p>Automação de captura de leads e respostas de email.</p>
+                                <p>Automação na captura de leads(clientes) e respostas de email.</p>
                             </div>
                             <div class="text">
                                 <img src="./assets/verificado-icon.png" alt="">
                                 <p>Automações internas na sua rotina de trabalho feitas sob medida para você.</p>
                             </div>
-                            <div class="text">
+                            <!-- <div class="text">
                                 <img src="./assets/verificado-icon.png" alt="">
                                 <p>Bot inteligente que auxilia você e seus funcionários no dia a dia.</p>
+                            </div> -->
+                            <div class="text">
+                                <img src="./assets/verificado-icon.png" alt="">
+                                <p>Bot para treinar novos funcionários e sanar as dúvidas.</p>
                             </div>
                             <div class="text">
                                 <img src="./assets/verificado-icon.png" alt="">
-                                <p>Bot para treinar novos funcionários e sanar as dúvidas..</p>
-                            </div>
-                            <div class="text">
-                                <img src="./assets/verificado-icon.png" alt="">
-                                <p>Assistente virtual para atas de reuniões, que sintetiza os pontos discutidos e os
-                                    compromissos assumidos.</p>
+                                <p>Assistente virtual para reuniões, que resume os pontos discutidos e decisões tomadas.</p>
                             </div>
                         </div>
                     </div>
@@ -275,24 +274,15 @@
                             </div>
                             <div class="text">
                                 <img src="./assets/verificado-icon.png" alt="">
-                                <p>Automação de captura de leads e respostas de email.</p>
+                                <p>Acompanhamento dos resultados e coleta de Feedback</p>
                             </div>
                             <div class="text">
                                 <img src="./assets/verificado-icon.png" alt="">
-                                <p>Automações internas na sua rotina de trabalho feitas sob medida para você.</p>
+                                <p>Aprimoramento contínuo após a entrega do serviço</p>
                             </div>
                             <div class="text">
                                 <img src="./assets/verificado-icon.png" alt="">
-                                <p>Bot inteligente que auxilia você e seus funcionários no dia a dia.</p>
-                            </div>
-                            <div class="text">
-                                <img src="./assets/verificado-icon.png" alt="">
-                                <p>Bot para treinar novos funcionários e sanar as dúvidas.</p>
-                            </div>
-                            <div class="text">
-                                <img src="./assets/verificado-icon.png" alt="">
-                                <p>Assistente virtual para atas de reuniões, que sintetiza os pontos discutidos e os
-                                    compromissos assumidos.</p>
+                                <p>Estudo detalhado da sua rotina de trabalho, para criar automações exclusivas para suas necessidades, eliminando gargalos.</p>
                             </div>
                         </div>
                     </div>
